<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sun.abby.lab1.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/loginText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/loginText"
        android:layout_alignParentStart="true"
        android:text="@string/ButtonText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startChat"
        android:id="@+id/startChat"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToWeather"
        android:id="@+id/weatherButton"
        android:layout_below="@+id/startChat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />
</RelativeLayout>
