<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.sun.abby.lab1.ListItemActivity"
    android:columnCount="2"
    android:rowCount="2">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/radioButton"
        android:layout_row="0"
        android:layout_column="0"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/checkBox"
        android:layout_row="0"
        android:layout_column="1"
        android:checked="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:id="@+id/switch1"
        android:layout_row="1"
        android:layout_column="0"
        android:checked="false" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@android:drawable/btn_star_big_on" />
</GridLayout>
